[gd_scene load_steps=3 format=3 uid="uid://c47nl3bxunebq"]

[ext_resource type="Script" uid="uid://cfhaftgrl0dx3" path="res://scenes/game/slideout_dialog.gd" id="1_eli07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eli07"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="SlideoutDialog" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_eli07")
script = ExtResource("1_eli07")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Slideout Text Goes here"
horizontal_alignment = 1

[node name="OptionalCheck" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ignore Further Matches"

[node name="AcceptButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Accept"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
